--- a/carousel.css
+++ b/carousel.css
@@ -28,10 +28,11 @@ body {
 }
 .carousel-item > img {
   position: absolute;
+  margin-top: -300px;
   top: 0;
   left: 0;
   min-width: 100%;
-  height: 32rem;
+  /* height: 32rem; */
 }
 
 
@@ -90,4 +91,56 @@ body {
   .featurette-heading {
     margin-top: 7rem;
   }
+}
+
+/* ----------------- social media icon ----------------- */
+/* Style all font awesome icons */
+.fa {
+  padding: 0.5em;
+  font-size: 1.875em;
+  width: 2em;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 50%;
+}
+
+/* Add a hover effect if you want */
+.fa:hover {
+  opacity: 0.7;
+  color: white;
+}
+
+/* Set a specific color for each brand */
+
+/* Facebook */
+.fa-facebook {
+  background: #3B5998;
+  color: white;
+}
+
+/* Gmail */
+.fa-envelope {
+  background: #d62a2a;
+  color: white;
+}
+
+/* instagram */
+.fa-instagram {
+  background-color: #4c5fd7;
+  background-image: linear-gradient(225deg, #4c5fd7 0%, #7232bd 30%, #f46f30 66%, #ffdc7d 100%);
+  color: white;
+}
+
+/* carousel */
+#carousel-text{
+  background: rgb(22,22,22);
+  background: linear-gradient(0deg, rgba(22,22,22,0.23042720506171221) 0%, rgba(84,84,84,0.22762608461353295) 36%, rgba(153,153,153,0.22762608461353295) 100%);
+  padding: 1em;
+}
+
+/* function logo*/
+.function-pic{
+  width: 10em;
+  height: 10em;
+  border-radius: 50%;
 }
