--- a/css/login.css
+++ b/css/login.css
@@ -1,7 +1,15 @@
-body {
-  background: url("picture/bg_lol.jpg");
+body{
+  content: '';
+  position: absolute;
+  left: 0; right: 0; top: 0; bottom: 0;
+  background: url('picture/login_bg.jpg') no-repeat center / contain;
   background-attachment: fixed;
-  margin: 0;
+  margin: 0px auto;
+  z-index: -1;
+  /* opacity: .001; */
+  width: 100%;
+  height: 100%;
+  background-size: cover;
 }
 .container {
   display: flex;
@@ -25,7 +33,7 @@ body {
   width: 370px;
   height: 310px;
   display: flex;
-  background-color: rgba(240, 240, 240, 0.5);
+  background-color: rgba(240, 240, 240, 0.8);
   border-radius: 2%;
   justify-content: center;
   align-items: center;
